--- a/templates/header.html
+++ b/templates/header.html
@@ -9,6 +9,7 @@
     <link type="text/css" rel="stylesheet" href="/css/default.css"/>
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script src="/js/three.min.js"></script>
+	<script src="/js/colorpicker.js"></script>
 	<script src="/js/main.js"></script>
   </head>
 <body>
