--- a/templates/body.html
+++ b/templates/body.html
@@ -13,7 +13,7 @@
 					<input type="radio" name="poly_type" value="tri"/> Triangle<br>
 					<input type="radio" name="poly_type" value="quad"/> Quadrilateral<br><br>
 					<p><b>Select canvas size</b></p>
-					<input type="radio" name="cnv_size" value="1" checked/> 320x240<br>
+					<input type="radio" name="cnv_size" value="1"/> 320x240<br>
 					<input type="radio" name="cnv_size" value="2"/> 640x480<br>
 					<input type="radio" name="cnv_size" value="3"/> 800x600
 				</div>
@@ -39,74 +39,8 @@
 		<div class="container">
 			<div id="rp_canvas"></div>
 				<script type="text/javascript">
-	colorpicker();
-	$('#c0').click()
-	// set the scene size
-	var WIDTH = 800,
-	    HEIGHT = 600;
 
-	// set some camera attributes
-	var VIEW_ANGLE = 45,
-	    ASPECT = WIDTH / HEIGHT,
-	    NEAR = 0.1,
-	    FAR = 10000;
-
-	// get the DOM element to attach to
-	// - assume we've got jQuery to hand
-	var $container = $('#rp_canvas');
-
-	// create a WebGL renderer, camera
-	// and a scene
-	var renderer = new THREE.WebGLRenderer();
-	var camera = new THREE.PerspectiveCamera(  VIEW_ANGLE,
-	                                ASPECT,
-	                                NEAR,
-	                                FAR  );
-	var scene = new THREE.Scene();
-
-	// the camera starts at 0,0,0 so pull it back
-	camera.position.z = 300;
-
-	// start the renderer
-	renderer.setSize(WIDTH, HEIGHT);
-
-	// attach the render-supplied DOM element
-	$container.append(renderer.domElement);
-
-	// create the sphere's material
-	var sphereMaterial = new THREE.MeshLambertMaterial(
-	{
-	    color: 0xCC0000
-	});
-
-	// set up the sphere vars
-	var radius = 50, segments = 16, rings = 16;
-
-	// create a new mesh with sphere geometry -
-	// we will cover the sphereMaterial next!
-	var sphere = new THREE.Mesh(
-	   new THREE.SphereGeometry(radius, segments, rings),
-	   sphereMaterial);
-
-	// add the sphere to the scene
-	scene.add(sphere);
-
-	// and the camera
-	scene.add(camera);
-
-	// create a point light
-	var pointLight = new THREE.PointLight( 0xFFFFFF );
-
-	// set its position
-	pointLight.position.x = 10;
-	pointLight.position.y = 50;
-	pointLight.position.z = 130;
-
-	// add to the scene
-	scene.add(pointLight);
-
-	// draw!
-	renderer.render(scene, camera);	</script>
+</script>
 
 		</div>
 		<ul class="actions">
