--- a/templates/body.html
+++ b/templates/body.html
@@ -32,16 +32,12 @@
 			</div>
 		</div>
 		<ul class="actions">
-			<li><a href="#" class="button">Render</a></li>
+			<li><a href="#" class="button" id="render_btn">Render</a></li>
 		</ul>
 	</div>
 	<div id="featured">
 		<div class="container">
 			<div id="rp_canvas"></div>
-				<script type="text/javascript">
-
-</script>
-
 		</div>
 		<ul class="actions">
 			<li><a href="#" class="button">Clear Canvas</a></li>
