--- a/templates/body.html
+++ b/templates/body.html
@@ -45,12 +45,14 @@
 	</div>
 	<div id="page" class="container">
 		<p>Objects</p>
-		<select size="10">
-			<option>Triangle 10 20 20 300</option>
-			<option>Triangle 10 20 20 300</option>
-			<option>Triangle 10 20 20 300</option>
-			<option>Triangle 10 20 20 300</option>
-		</select>
+		<table id="object_table" cellspacing="0" width="100%">
+			<tr>
+				<th>Polygon Type</th>
+				<th>Coordinates</th>
+				<th>Edit Coordinates</th>
+				<th>Delete</th>
+			</tr>
+		</table>
 		<ul class="actions">
 			<li><a href="#" class="button">Update</a></li>
 		</ul>
