--- a/templates/body.html
+++ b/templates/body.html
@@ -44,17 +44,6 @@
 		</ul>
 	</div>
 	<div id="page" class="container">
-		<p>Objects</p>
-		<table id="object_table" cellspacing="0" width="100%">
-			<tr>
-				<th>Polygon Type</th>
-				<th>Coordinates</th>
-				<th>Edit Coordinates</th>
-				<th>Delete</th>
-			</tr>
-		</table>
-		<ul class="actions">
-			<li><a href="#" class="button">Update</a></li>
-		</ul>
+		<table id="object_table" cellspacing="0" width="100%"></table>
 	</div>
 </div>
