Preparing for initial release

--- a/templates/body.html
+++ b/templates/body.html
@@ -39,9 +39,9 @@
 		<div class="container">
 			<div id="rp_canvas"></div>
 		</div>
-		<ul class="actions">
+		<!--<ul class="actions">
 			<li><a href="#" class="button">Clear Canvas</a></li>
-		</ul>
+		</ul>-->
 	</div>
 	<div id="page" class="container">
 		<table id="object_table" cellspacing="0" width="100%"></table>
