Added link to Github page

--- a/templates/header.html
+++ b/templates/header.html
@@ -23,8 +23,7 @@
 			<ul>
 				<li class="current_page_item"><a href="#" accesskey="1" title="">Homepage</a></li>
 				<li><a href="#" accesskey="3" title="">About</a></li>
-				<li><a href="#" accesskey="4" title="">Get Involved</a></li>
-				<li><a href="#" accesskey="5" title="">Login / Register</a></li>
+				<li><a href="https://github.com/vinayak-garg/renderpolygon" accesskey="4" title="">Get Involved</a></li>
 			</ul>
 		</div>
 	</div>
